# StatPhys

./: .gitignore  LICENSE  README.md
algorithm/: algorithm2e.sty  main.nav  main.tex
chapter4/ex2/: Makefile
chapter4/ex3/: Makefile
chapter4/ex4/: Makefile
chapter4/ex5/: Makefile
chapter5/: Makefile  chapter5.ipynb
chapter5/ex1/: Makefile  calculate.sh  compile_float.sh  compile_long_double.sh  params.template
chapter5/ex2/: calculate.sh  coord.inp  params.template
chapter5/ex3/: calculate.sh  params_eq.template  params_run.template
chapter5/ex4/: Makefile  calculate.sh  params.template
chapter5/ex5/: calculate.sh  params.template
chapter5/ex6/: Makefile  calculate.sh  coord.inp  params_periodic.inp  params_vacuum.inp  params_vacuum_eq.inp
mdatom/: CMakeLists.txt
mdatom/helper_scripts/: gr.py
mdatom/lib/: InteractionCalculator.cpp  InteractionCalculator.h  MDRun.cpp  MDRun.h  MDSimulation.cpp  TrajectoryFileWriter.cpp  TrajectoryFileWriter.h
presentation/: Makefile  algorithm2e.sty  main.tex  shake.avi  slides.tex
results/: harmonic.avi
simulations/end-to-end-distance/: Makefile  coords.inp  mdpar.ini  plot_numatoms.py  plot_temperature.py  run_simulations.sh
simulations/harmonic/: coords.inp  mdpar.ini
simulations/harmonic-potential/: Makefile
simulations/shake-algorithm/: Makefile  coords.inp  mdpar.ini
simulations/template/: Makefile  coords.inp  mdpar.ini
util/: energy.py  mdpar.ini  pargen.py  plot_gr.py  toxyz.py
